fixing actions-container spacing when inside read-only header

--- a/assets/_styles/components/read-only.scss
+++ b/assets/_styles/components/read-only.scss
@@ -51,6 +51,7 @@
   margin-bottom: 1em;
   .actions-container {
     margin-bottom: 0;
+    margin-top: 0;
   }
 }
 
